--- a/public/detalhes.html
+++ b/public/detalhes.html
@@ -30,6 +30,9 @@
   <button onclick="baixarTodos()">Baixar Todos</button>
   <button onclick="baixarHoje()">Baixar Chamados de Hoje</button>
 
+  <!-- ✅ Scripts no final, após o DOM -->
   <script src="gerar_relatorio.js"></script>
+  <script src="falha_conexao.js"></script>
+
 </body>
 </html>
