--- a/public/detalhes.html
+++ b/public/detalhes.html
@@ -35,4 +35,6 @@
   <script src="falha_conexao.js"></script>
 
 </body>
+<a href="historico.html" style="margin-left: 20px;">📊 Histórico Diário</a>
+
 </html>
