--- a/public/home.html
+++ b/public/home.html
@@ -59,6 +59,7 @@
 
   <!-- Botão de redirecionamento -->
   <button onclick="irParaDetalhes()" class="link-detalhes">Detalhes</button>
+  <button onclick="window.location.href='historico.html'" class="link-detalhes">Ver Histórico</button>
 
   <!-- Tela de carregamento ao clicar -->
   <div id="tela-loading">Carregando chamados...</div>
