--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; URL='home.html'" />
-    <title>Redirecionando...</title>
-  </head>
-  <body>
-    Redirecionando para a Home...
-  </body>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <title>GLPI Chamados - SPA</title>
+  <link rel="stylesheet" href="/css/style.css" />
+</head>
+<body>
+  <nav style="text-align: center; margin-bottom: 20px;">
+    <button onclick="navegar('home')">🏠 Home</button>
+    <button onclick="navegar('detalhes')">📋 Detalhes</button>
+    <button onclick="navegar('dias')">📆 Dias</button>
+  </nav>
+
+  <main id="conteudo">
+    <!-- Conteúdo dinâmico -->
+  </main>
+
+  <script src="/js/app.js"></script>
+</body>
 </html>
