tudo ok, inclusive o envio no zap

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <button onclick="navegar('home')">🏠 Home</button>
     <button onclick="navegar('detalhes')">📋 Detalhes</button>
     <button onclick="navegar('dias')">📆 Dias</button>
+    <button onclick="navegar('rel18h')">📸 18h</button>
   </nav>
 
   <main id="conteudo">
