--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <title>GLPI Chamados - SPA</title>
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <nav style="text-align: center; margin-bottom: 20px;">
     <button onclick="navegar('home')">🏠 Home</button>
-    <button onclick="navegar('detalhes')">📋 Detalhes</button>
     <button onclick="navegar('dias')">📆 Dias</button>
   </nav>
 
@@ -17,6 +15,6 @@
     <!-- Conteúdo dinâmico -->
   </main>
 
-  <script src="/js/app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
